tests/ui/asm/naked-asm-outside-naked-fn.stderr
error: the `naked_asm!` macro can only be used in functions marked with `#[unsafe(naked)]`
  --> $DIR/naked-asm-outside-naked-fn.rs:21:5
   |
LL |     naked_asm!("")
   |     ^^^^^^^^^^^^^^

error: the `naked_asm!` macro can only be used in functions marked with `#[unsafe(naked)]`
  --> $DIR/naked-asm-outside-naked-fn.rs:26:9
   |
LL |     (|| naked_asm!(""))()
   |         ^^^^^^^^^^^^^^

error: the `naked_asm!` macro can only be used in functions marked with `#[unsafe(naked)]`
  --> $DIR/naked-asm-outside-naked-fn.rs:32:9
   |
LL |         naked_asm!("");
   |         ^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

